# wizard_focus

server/: .env.example  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 69c194ea99e9_initial_models.py
server/auth/: jwt.py
server/models/: artifacts.py  timer_sessions.py  user.py  user_stats.py
server/routers/: users.py
server/schemas/: user_stats.py
server/src/: config.py  database.py  main.py
server/src/auth/: dependencies.py  jwt.py  oauth.py
server/src/crud/: oauth_accounts.py  stats.py  users.py
server/src/models/: oauth_account.py  timer_sessions.py
server/src/routers/: auth.py  oauth.py  stats.py  users.py
server/src/schemas/: base.py  oauth_account.py  token.py  user.py
server/tests/: conftest.py  test_auth.py  test_oauth.py  test_stats.py  test_users.py
