[project]
name = "wizard-focus-server"
version = "0.1.0"
description = "Backend API for Wizard Focus: a gamified focus timer app inspired by Forest, themed around wizards and magic."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["focus", "productivity", "wizard", "pomodoro", "fastapi"]

dependencies = [
    "fastapi[standard]>=0.135.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
