[project]
name = "wizard-focus-server"
version = "0.1.0"
description = "Backend API for Wizard Focus: a gamified focus timer app inspired by Forest, themed around wizards and magic."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["focus", "productivity", "wizard", "pomodoro", "fastapi"]

dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.2",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
